# bus

./: .gitignore  README.md  app.py  bus_settings.json  pyproject.toml
src/bus_app/: __init__.py  __main__.py  api.py  desktop.py  map_view.py  models.py  settings.py  ui.py  utils.py  webapp.py
src/bus_app/static/: app.js  index.html  styles.css
tests/: test_api_parsing.py  test_map_math.py
